tooling/nargo_cli/tests/snapshots/execution_failure/lambda_from_empty_array_dyn_index/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
bug: Assertion is always false
  ┌─ src/main.nr:5:5
  │
5 │     lambdas[x - 1](());
  │     -------------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:5:5

error: Assertion failed: Index out of bounds, array has size 0, but index was 0
  ┌─ src/main.nr:5:5
  │
5 │     lambdas[x - 1](());
  │     --------------
  │
  = Call stack:
    1: main
            at src/main.nr:5:5

Failed assertion
