tooling/nargo_cli/tests/snapshots/execution_failure/lambda_from_empty_array_dyn_index/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:5:5
  │
5 │     lambdas[x - 1](());
  │     --------------
  │
  = Call stack:
    1. src/main.nr:5:5

Failed assertion
