tooling/nargo_cli/tests/snapshots/execution_failure/lambda_from_empty_array_dyn_index/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 0 is out of bounds for the array of length 0
  ┌─ src/main.nr:5:5
  │
5 │     lambdas[x - 1](());
  │     --------------
  │

Error interpreting main function
